--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <script src="tarea2Methods.js"></script>
     <script src="tareaEjercicio1.js"></script>
     <script src="whater.js"></script> -->
-    <script src="class4Ciclo..js"></script>
+    <!-- <script src="class4Ciclo..js"></script> -->
 
 </body>
 </html>
