--- a/index.html
+++ b/index.html
@@ -8,25 +8,18 @@
 </head>
 
 <body>
-<!-- <script src="arrayFInish.js"></script>
-<script src="arrays.js"></script>
-<script src="arrowFunction.js"></script>
-<script src="Base.js"></script>
-<script src="callbacks.js"></script>
-<script src="CelToFa.js"></script>
-<script src="ciclos.js"></script>
-<script src="Condicional.js"></script>
-<script src="ejercicioCallBacks.js"></script>
-<script src="ejercicioSesion3.js"></script>
-<script src="function.js"></script>
-<script src="GrupalEjerciceS5.js"></script>
-<script src="homeWorkS5.js"></script>
-<script src="homeWorkS6.js"></script>
-<script src="homeWorkS7.js"></script>
-<script src="IsLarge.js"></script>
-<script src="practicaS3.js"></script>
-<script src="stringMethods.js"></script>
-<script src="testPractica.js"></script> -->
+
+    <!-- <script src="clase1Base.js"></script>
+    <script src="clase2Condicionales.js"></script>
+    <script src="clase3StringMethods.js"></script>
+    <script src="ejercicioCalculadoraSwitch.js.js"></script>
+    <script src="ejercicioIsLarge.js"></script>
+    <script src="gradosEjercicio.js"></script>
+    <script src="practicasSesion3.js"></script>
+    <script src="tarea2Methods.js"></script>
+    <script src="tareaEjercicio1.js"></script>
+    <script src="whater.js"></script> -->
+    <script src="class4Ciclo..js"></script>
 
 </body>
 </html>
